feat: k6 load test script init
